# esp32-sd-reader

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  sdkconfig
hardware/: README.md
main/: CMakeLists.txt  idf_component.yml  led_control.c  led_control.h  sd_card_logic.c  sd_card_logic.h  sd_cid_reader.c  sd_reader_app.c
main/app/: sd_reader_app.c
main/config/: project_manifest.h  web_config.h
main/led/: led_control.c
main/sd/: sd_card_logic.c  sd_card_logic.h
main/web/: web_server.c  web_server.h  web_status.c  web_status.h  web_status_template.html
stl/: ESP Holder.stl  README.md
stl/v1/: Case.stl  README.md  Top.stl
stl/v2/: Bottom.stl  README.md  Top.stl
